# python-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: index.html
